# rl_fuel

./: .gitignore  DESIGN.md  PROJECT_STATUS.md  README.md  debug_bc1_explore.py  debug_frontier.py  diagnose_frontier.py  diagnose_height.py  eval_all_maps.py  experiment.py  explore.py  map_loader_new.py  opencode.md  plot_train_curves.py  pyproject.toml  requirements.txt  rl-fuel-tensorboard.service  rl-fuel-train12.service  rl-fuel-train9.service  run_ppo.sh  run_reinforce.sh  run_sac.sh  run_sac_seq5.py  run_sac_watchdog.py  sequence_env.py  setup.py  start_train.sh  test_env.py  test_frontier_3d.py  test_frontier_shape.py  test_model.py  test_ppo_v2.py  train.py  train_sac_seq10.py  train_sac_seq11.py  view_3d.py  vis_closest_large.py  visualize_exploration.py
docs/: COMMANDS.md  IMPROVEMENTS.md
experiment/: experiment.py
fuel_rl/: __init__.py  callbacks.py  config.py  diagnose_env.py  env.py  map_loader.py  plot_metrics.py  visualizer.py
legacy/: debug_model_frontier.py  diagnose_frontier_merge.py  env_multistep.py  eval.py  explore_v3.py  explore_viz.py  run_reinforce_rollout.sh  trace_frontier_count.py  trace_frontier_flow.py  train_reinforce_rollout.py
rules/: git-commit.md
scripts/: compare_seq.py  monitor_seq_ppo.sh  run_bc.sh  run_ppo.sh  run_reinforce.sh  run_sac.sh  run_sac_seq.sh  run_sac_seq4.sh  run_sac_seq5.sh  run_seq_ppo.sh  vis2d_env.py  vis2d_seq8.py  vis_4m_40m.py  vis_sac_seq12.py
services/: rl-fuel-train10.service  rl-fuel-train11.service  rl-fuel-train8.service
src/: order_policy.py  sequence_env.py
tests/: test_integration.py  (+1 more)
(+66 files in other folders)
