[build-system]
requires = ["setuptools>=45", "pybind11[global]>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "fuel-rl"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
include = ["fuel_rl*"]
